[DevTools] Fix window object init on chrome://* pages

BUG=627407
R=dgozman@chromium.org

Review-Url: https://codereview.chromium.org/2151573002
Cr-Commit-Position: refs/heads/master@{#405358}

Former-commit-id: 3ac9439a02b4185916378572f343f1870f71fc4b