third_party/WebKit/Source/bindings/core/v8/ScriptController.cpp
@@ -263,14 +263,8 @@ void ScriptController::collectIsolatedContexts(Vector<std::pair<ScriptState*, Se
 
 void ScriptController::updateDocument()
 {
-    bool forceMainWorldInitialization = false;
-    if (canExecuteScripts(NotAboutToExecuteScript) && !frame()->loader().stateMachine()->creatingInitialEmptyDocument()) {
-        Settings* settings = frame()->settings();
-        forceMainWorldInitialization = settings && settings->forceMainWorldInitialization();
-    }
-
     // For an uninitialized main window windowProxy, do not incur the cost of context initialization.
-    if (!forceMainWorldInitialization && !m_windowProxyManager->mainWorldProxy()->isGlobalInitialized())
+    if (!m_windowProxyManager->mainWorldProxy()->isGlobalInitialized())
         return;
 
     if (!initializeMainWorld())
